[package]
name = "delauronoi"
version = "0.1.0"
description = "Delaunay triangulation of sets of points producing meshes and Voronoi diagrams"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.7"
nalgebra = "0.18.0"

[dev-dependencies]
clap = "2.33.0"
coffee = { version = "0.3.1", features = ["metal"] }
env_logger = "0.6.2"
glsl-to-spirv = "0.1.7"
rand = "0.7.0"

[profile.dev]
opt-level = 2
